<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.del.MainActivity" >

    <!-- TODO your layout here -->

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/bu_start_over"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="17dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info1"
        android:layout_alignRight="@+id/info1"
        android:layout_below="@+id/info1"
        android:layout_marginTop="62dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info2"
        android:layout_alignRight="@+id/info2"
        android:layout_below="@+id/info2"
        android:layout_marginTop="45dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/partnerText"
        android:layout_alignBottom="@+id/partnerText"
        android:layout_alignLeft="@+id/info3"
        android:text="@string/partenerString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/salmon" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bu_start_over"
        android:layout_alignLeft="@+id/textView6"
        android:text="@string/toHeaderString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/salmon" />

    <TextView
        android:id="@+id/partnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fromText"
        android:layout_alignRight="@+id/bu_start_over"
        android:layout_marginBottom="18dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginBottom="16dp"
        android:text="@string/fromHeaderString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/salmon" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/partnerText"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bu_start_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/salmon"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="150dp"
        android:padding="@dimen/padding"
        android:text="@string/start_over"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bu_start_over"
        android:layout_below="@+id/textView6"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>